<resources>
    <string name="app_name">HotspotShield</string>
    <string name="notification_title">Solar VPN - %s</string>
    <string name="unknown_state">Unknown state</string>
    <string name="traffic_in">Downloaded: %s</string>
    <string name="traffic_out">Uploaded: %s</string>
    <string name="download_speed">Download speed: ↓%s/s</string>
    <string name="upload_speed">Upload speed: ↑%s/s</string>
    <string name="connect_time">Connection time: %s</string>
    <string name="vpn">VPN</string>
    <string name="connection">Connection</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="auto_protection">Auto Protection</string>
    <string name="speed_test">Speed Test</string>
    <string name="ip_checker">IP Checker</string>
    <string name="dns_leak_test">DNS Leak Test</string>
    <string name="ping">Ping: ----</string>
    <string name="server_location">Server Location</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="can_not_start_vpn">Can not start open VPN</string>
    <string name="connect">Connect</string>
    <string name="stop">Stop</string>
    <string name="empty_text" />
    <string name="setting">Setting</string>
    <string name="automatic_vpn_connection">Automatic VPN Connection</string>
    <string name="automatically_connect_when_app_starts">Automatically connect VPN when the app starts</string>
    <string name="automatic_turn_on">Automatically turn on for:</string>
    <string name="turn_of_during_sleep">Turn of VPN during sleep mode</string>
    <string name="automatically_disconnect_when_mobile_sleep">Automatically disconnect VPN when your mobile phone goes into sleep mode after 30 minutes to save your battery</string>
    <string name="unsecured_wifi">Unsecured Wi-fi</string>
    <string name="secured_wifi">Secured Wi-fi</string>
    <string name="instruction_for_you">Instruction for you</string>
    <string name="most_frequently_asked_question">Most frequently asked question</string>
    <string name="mobile_networks">Mobile Networks</string>
    <string name="you_have_connected_this_vpn">You have been connected to this VPN</string>
    <string name="account">Account</string>
    <string name="rating">Rating</string>
    <string name="device">DEVICE</string>
    <string name="email">EMAIL</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up">SIGN UP</string>
    <string name="alter_login">We will not post information without your permission</string>
    <string name="alter_password">Use 8 or more characters with a mix of letters, numbers</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="add_favorite_apps">Add your favorite apps to automatically connect:</string>
    <string name="select_all_app">Select all app</string>
    <string name="request_usage_permission">Please accept %s have permission to doing this action</string>
    <string name="change_password">Change Password</string>
    <string name="de_dam_bao_tai_khoan">Để đảm bảo tài khoản của bạn luôn an toàn,\n vui lòng nhập mật khẩu Solar VPN\n của bạn để tiếp tục</string>
    <string name="current_password">CURRENT PASSWORD</string>
    <string name="next">NEXT</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="nhap_mat_khau_moi_cua_ban">Nhập mật khẩu mới của bạn!</string>
    <string name="save">SAVE</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="use_8_or_more_characters_with_a_mix_of_letters_numbers">Use 8 or more characters with a mix of letters, numbers</string>
    <string name="first">First,</string>
    <string name="you_need_to_create_an_account_to_use_full_range_of_features_at_sign_up_button">you need to \"Create An Account\" to use full range of features at Sign Up button.</string>
    <string name="second">Second,</string>
    <string name="you_tap_server_locations_to_pull_up_the_server_list_and_select_a_preferred_server_to_connect">You tap \"Server Locations\" to pull up the server list and select a preferred server to connect</string>
    <string name="then">Then,</string>
    <string name="click_auto_protection_to_choose_your_favorite_apps_on_your_mobile_device_to_automatically_protect_them">click \"Auto Protection\" to choose your favorite apps on your mobile device to automatically protect them.</string>
    <string name="finallydot">Finally,</string>
    <string name="click_on_main_menu_where_you_can_manage_your_account_upgrade_to_premium_check_ip_dns_leak_kill_switch_share_rate_and_set_as_desired">click on \"Main Menu\" where you can manage your account,upgrade to Premium, check IP, DNS leak, Kill Switch, share, rate and set as desired</string>
    <string name="here_are_few_quick_steps_that_can_help_you_troubleshoot_issues">Here are few quick steps that can help you troubleshoot issues:</string>
    <string name="whydo">You need to Sign Up your account if you want to use Solar-VPN Premium on your other devices If you do not register an account, the feature that uses VPN Premium on another device, it will not be usable. Need to create an account now to connect on another device</string>
    <string name="whydoi">Why do i need create an account Solar - VPN?</string>

</resources>
