<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
            android:layout_marginBottom="@dimen/margin_55"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_auto_protection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_11"
                    android:textColor="@color/colorWhite"
                    android:text="@string/auto_protection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_speed_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_11"
                    android:textColor="@color/colorWhite"
                    android:text="@string/speed_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_ip_checker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_11"
                    android:textColor="@color/colorWhite"
                    android:text="@string/ip_checker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_dns_leak_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_11"
                    android:textColor="@color/colorWhite"
                    android:text="@string/dns_leak_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>