<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/_26sdp"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="@dimen/_32sdp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:background="@drawable/ic_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="@dimen/_32sdp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_11"
        android:layout_marginStart="@dimen/_30sdp"
        android:textStyle="italic"
        android:textColor="@color/colorWhite"
        android:text="@string/alter_password"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_height="wrap_content">

        <EditText
            android:maxLines="1"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/confirm_password"
        android:layout_marginStart="@dimen/_32sdp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:background="@drawable/ic_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mImgSignUp"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:background="@drawable/ic_sign_in"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/text_size_s"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:src="@drawable/vetinh_singup_3"
        android:layout_height="@dimen/_110sdp"/>


</LinearLayout>