<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/ic_rectangle"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/text_sign_google"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_google"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_sign_google"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_s"
            android:text="@string/sign_in_with_google"
            android:layout_centerInParent="true"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/text_alter"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_11"
        android:layout_marginTop="@dimen/_7sdp"
        android:textColor="@color/colorWhite"
        android:text="@string/alter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_line"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:text="or"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_line"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="@dimen/_32sdp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:background="@drawable/ic_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="@dimen/_32sdp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="1"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:background="@drawable/ic_sign_in"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/text_size_s"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_in"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView

        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>